--- a/aspnetcore/whats-new/index.yml
+++ b/aspnetcore/whats-new/index.yml
@@ -5,18 +5,20 @@ metadata:
   title: ASP.NET Core-Dokumentation – Neuerungen
   description: Dokumentation zu den neuen und aktualisierten Inhalten in ASP.NET Core.
   ms.topic: landing-page
-  ms.date: 06/01/2020
-  ms.openlocfilehash: dd9c58f119527ba23b30e332caebfff67ceafb80
-  ms.sourcegitcommit: 5fe724d143825ca799e5bd03fb45b632ea4aa7d5
+  ms.date: 07/06/2020
+  ms.openlocfilehash: c2a3f0d9473355655b176f3a87c9f3e9f68b0f21
+  ms.sourcegitcommit: fa89d6553378529ae86b388689ac2c6f38281bb9
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/02/2020
-  ms.locfileid: "84272137"
+  ms.lasthandoff: 07/07/2020
+  ms.locfileid: "86060266"
 landingContent:
 - title: Neuerungen in ASP.NET Core
   linkLists:
   - linkListType: whats-new
     links:
+    - text: Juni 2020
+      url: 2020-06.md
     - text: Mai 2020
       url: 2020-05.md
     - text: April 2020
@@ -27,8 +29,6 @@ landingContent:
       url: 2020-02.md
     - text: Januar 2020
       url: 2020-01.md
-    - text: Dezember 2019
-      url: 2019-12.md
 - title: ASP.NET Core-Dokumentation mitgestalten
   linkLists:
   - linkListType: overview
