--- a/aspnetcore/whats-new/toc.yml
+++ b/aspnetcore/whats-new/toc.yml
@@ -1,10 +1,12 @@
-- name: Neuigkeiten
+- name: Neues
   href: index.yml
   expanded: true
   items:
     - name: 2020
       expanded: true
       items:
+        - name: Juli
+          href: 2020-07.md
         - name: June
           href: 2020-06.md
         - name: May
@@ -15,5 +17,3 @@
           href: 2020-03.md
         - name: Februar
           href: 2020-02.md
-        - name: January
-          href: 2020-01.md
